# lib_face_meet

./: .gitignore  CMakeLists.txt  main.cpp
include/: aes_encryption.h
src/: aes_encryption.cpp
